--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.4.0",
@@ -16,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "3.3.0",
     "yup": "^0.28.1"
   },
